# iso8601

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUALITY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: PROJECT_BRIEF.md
src/iso8601/: __init__.py  _date.py  _datetime.py  _duration.py  _errors.py  _time.py  _validate.py
tests/: conftest.py  test_api_surface.py  test_date.py  test_datetime.py  test_duration.py  test_integration.py  test_time.py  test_validate.py
