[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "iso8601"
version = "0.1.0"
description = "Strict ISO-8601 date / time / datetime / duration parser, zero deps."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nripanka Das" }]
requires-python = ">=3.10"
keywords = ["iso8601", "datetime", "date", "time", "duration", "parser", "rfc3339"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/nripankadas07/iso8601"
Source   = "https://github.com/nripankadas07/iso8601"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iso8601 = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["iso8601"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
